--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@
 과제/2주차/do_it_django_atoz_4bootstrap/bootstrap4/css/bootstrap.min.css
 과제/2주차/do_it_django_atoz_4bootstrap/bootstrap4/css/bootstrap.min.css.map
 과제/2주차/do_it_django_atoz_4bootstrap/images/stay_funky.jpg
+과제/2주차/chapter3/20200675문서연_(9.15)실습과제.zip
