--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,13 @@
 과제/2주차/do_it_django_atoz_4bootstrap/bootstrap4/css/bootstrap.min.css.map
 과제/2주차/do_it_django_atoz_4bootstrap/images/stay_funky.jpg
 과제/2주차/chapter3/20200675문서연_(9.15)실습과제.zip
+강의자료/05 장고 역할.pdf
+강의자료/06 장고 프로젝트.pdf
+강의자료/07 장고 앱 개발.pdf
+과제/4주차/posts.png
+과제/4주차/users.png
+과제/4주차/깃허브_repository.png
+과제/4주차/인터넷프로그래밍\[4주차\]_20200675문서연.zip
+과제/5주차/컴퓨터공학과20200675문서연_(9.29)실습과제.zip,과제/5주차/컴퓨터공학과20200675문서연_commit이이루어진깃허브저장소화면.png,과제/5주차/컴퓨터공학과20200675문서연_대문페이지.png,과제/5주차/컴퓨터공학과20200675문서연_블로그목록페이지.png,과제/5주차/컴퓨터공학과20200675문서연_블로그상세페이지(1).png,과제/5주차/컴퓨터공학과20200675문서연_블로그상세페이지(2).png,과제/5주차/컴퓨터공학과20200675문서연_자기소개페이지.png
+*.zip
+*.png
